@@ -1,3 +1,4 @@
+Fixed: Selecting "frictionless" shouldn't change the "pause" icon to the "record" icon near the timeline controls
 Added zoom in/out buttons for Work/Energy bar chart
 Added text symbol Fsum next to the arrow in the control panel area
 Fixed: Something invisible near x=0 is blocking mouse input; to reproduce the problem put the block at x=0 and mouse around on the block
